# stm32-midi-cmake

./: CMakeLists.txt  README.md  flash.sh  libopencm3.cmake
src/: CMakeLists.txt  Clock.cpp  Clock.hpp  Midi.cpp  Midi.hpp  Systick.cpp  Systick.hpp  main.cpp
src/adc/: Adc.cpp  Adc.hpp  CMakeLists.txt
src/clock/: CMakeLists.txt  Clock.cpp  Clock.hpp
src/control/: CMakeLists.txt  Control.cpp  Control.hpp
src/fader/: CMakeLists.txt  Faders.cpp  Faders.hpp
src/midi/: CMakeLists.txt  Midi.cpp  Midi.hpp  MidiMessage.cpp  MidiMessage.hpp
src/usart/: CMakeLists.txt  Usart.cpp  Usart.hpp
